removes borders, centered text and images, added pitcher-img made it a link, added hover effects

--- a/index.html
+++ b/index.html
@@ -12,24 +12,27 @@
                 <p>Lexi Miranda</p>
                 <p>🥎</p>
             </div>
+            <p class="booboo-bear">AKA Princess Boo Boo Bear</p>
         </header>
 
         <main>
             <!--SOFTBALL-STATS-->
-                <div class="pics border">
+                <div class="pics">
                     <img class="images" src="images/pitching-lexi.jpg">
                     <img class="images" src="images/62mph-lexi.jpg">
                     <img class="images" src="images/softball-smile2.jpg">
                 </div>
-                <p class="links"><link rel="stylesheet" href="sofball-stats/no-hitters">No Hitters</p>
-
+                    <figure>
+                        <a class="links" href="https://www.espn.com/" target="_blank"><img class="pitcher-img" src="https://ctl.s6img.com/society6/img/lP_7Y761mDRRYE3eCwq_ECNCYX8/w_700/posters/top/~artwork,fw_2718,fh_3618,fy_-113,iw_2718,ih_3844/s6-original-art-uploads/society6/uploads/misc/0eb64bc7ef594d6d84ff80618877a7c0/~~/girl-baseball-softball-pitcher-posters.jpg?wait=0&attempt=0"></a>
+                        <figcaption class="socials">No NO's</figcaption>
+                    </figure>
                 <!--SOCIALS-->
-                <div class="pics border">
+                <div class="pics">
                     <img class="images" src="images/dressy-lexy.jpg">
                     <img class="images" src="images/lexi-holding-star.jpg">
                     <img class="images" src="images/sleepy-lexi.jpg">
                 </div>
-                <p class="socials links"><a href="https://www.espn.com/">Socials</a></p>
+                <p class="socials"><a href="https://www.espn.com/" target="_blank">Socials</a></p>
                 
 
         </main>
