--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <header>
             <div class="intro-lexi"> 
                 <p>🥎</p>
-                <p>Lexi Miranda</p>
+                <p class="lexi">Lexi Miranda</p>
                 <p>🥎</p>
             </div>
             <p class="booboo-bear">AKA Princess Boo Boo Bear</p>
